--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-  <iframe src="map.html"></iframe>
+  <iframe src="map.html" width = "800" height = "600"></iframe>
 </body>
 </html>
