--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-  <iframe src="map.html" width = "800" height = "600"></iframe>
+  <iframe src="map.html" width = "800" height = "600">
   <iframe src="pc.html" width = 800" height = "600"></iframe>
 </body>
 </html>
