--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <html>
+  
+<head>
+  <script>
+  function resizeIframe(obj) {
+    obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
+  }
+</script>
+  </head>
 <body>
   <iframe src="map.html" frameborder="0" scrolling="no" onload="resizeIframe(this)" />
   <iframe src="pc.html" width = 800" height = "600"></iframe>
