--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </script>
   </head>
 <body>
-  <iframe src="map.html" frameborder="0" scrolling="no" onload="resizeIframe(this)" />
+  <iframe src="map.html" onload="this.style.height=this.contentDocument.body.scrollHeight +'px';">
   <iframe src="pc.html" width = 800" height = "600"></iframe>
 </body>
 </html>
