--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </script>
   </head>
 <body>
-  <iframe src="map.html" onload="this.style.height=this.contentDocument.body.scrollHeight +'px';" onload="this.style.width=this.contentDocument.body.scrollWidth +'px';">
+  <iframe src="map.html" onload="this.style.height=this.contentDocument.body.scrollHeight +'px'; 
+                                 this.style.width=this.contentDocument.body.scrollWidth +'px';">
   <iframe src="pc.html" width = 800" height = "600"></iframe>
 </body>
 </html>
