implemented Lauren's code to the index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  
+
 <head>
   <script>
   function resizeIframe(obj) {
@@ -9,6 +9,6 @@
   </head>
 <body>
   <iframe src="map.html" widht="50%" height="100%" scrolling="false">
-  <iframe src="pc.html" width = 800" height = "600"></iframe>
+  <iframe src="project.html" width = 800" height = "600"></iframe>
 </body>
 </html>
