--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </script>
   </head>
 <body>
-  <iframe src="map.html" widht="50%" height="100%" scrolling="false">
-  <iframe src="project.html" width = 800" height = "600"></iframe>
+  <iframe src="map.html" width = "800" height ="600" scrolling="false"></iframe>
+  <iframe src="project.html" width = "800" height = "600"></iframe>
 </body>
 </html>
