Fixing the index even more

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </script>
   </head>
 <body>
-  
+  <a href src="project.html">Project Link</a>
+  <iframe src="map.html" width = "800" height ="600" scrolling="false"></iframe>
   <iframe src="project.html" width = "800" height = "600"></iframe>
 </body>
 </html>
