--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 <body>
   <a href src="project.html">Project Link</a>
-  <iframe src="map.html" width = "800" height ="600" scrolling="false"></iframe>
-  <iframe src="project.html" width = "800" height = "600"></iframe>
+  <iframe src="map.html" width = "800" height ="600" scrolling="false" align="left">
+  <iframe src="project.html" width = "800" height = "600" align="right">
 </body>
 </html>
