--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
   <a href src="project.html">Project Link</a>
   <iframe src="map.html" width = "800" height ="600" scrolling="false" align="left">
-  <iframe src="project.html" width = "800" height = "600" align="right">
+  <iframe src="project.html" width = "800" height = "600" scrolling = "false" align="right">
 </body>
 </html>
