--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </script>
   </head>
 <body>
-  <a href src="project.html">Project Link</a>
+  <a href="project.html">Project Link</a>
   <iframe src="map.html" width = "800" height ="600" scrolling="false" align="left">
-  <iframe src="project.html" width = "800" height = "600" scrolling = "false" align="right">
+  <iframe src="project.html" width = "800" height = "600" scrolling = "false">
 </body>
 </html>
