--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <a href="project.html">Project Link</a>
   <iframe src="map.html" width = "800" height ="600" scrolling="false" align="left">
-    <iframe src="project.html" width = "800" height ="600" scrolling="false" align="left">
+  <iframe src="project.html" width = "800" height ="600" scrolling="false" align="left">
+  <iframe src="http://bl.ocks.org/mbostock/raw/4061502/0a200ddf998aa75dfdb1ff32e16b680a15e5cb01/" marginwidth="0" marginheight="0" scrolling="no"></iframe>
 </body>
 </html>
