--- a/map.html
+++ b/map.html
@@ -35,7 +35,7 @@
     <div id="floating-panel">
     <b>Start: </b>
     <select id="start">
-      <option value="chicago, il">Chicago</option>
+      <option value="{36.07623, 24.87469}">Point 1</option>
       <option value="st louis, mo">St Louis</option>
       <option value="joplin, mo">Joplin, MO</option>
       <option value="oklahoma city, ok">Oklahoma City</option>
@@ -50,7 +50,7 @@
     </select>
     <b>End: </b>
     <select id="end">
-      <option value="chicago, il">Chicago</option>
+      <option value="{36.07622, 24.8746}">Point 1</option>
       <option value="st louis, mo">St Louis</option>
       <option value="joplin, mo">Joplin, MO</option>
       <option value="oklahoma city, ok">Oklahoma City</option>
