Replaced dendrogram with Histogram

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
   <a href="project.html">Project Link</a>
   <iframe src="project.html" width = "400" height ="600" scrolling="false" align="left">
-  <iframe src="http://bl.ocks.org/mbostock/raw/4061502/0a200ddf998aa75dfdb1ff32e16b680a15e5cb01/" marginwidth="0" marginheight="0" scrolling="no"></iframe>
-  <iframe src="dendrograph.html" width = "800" height ="600" scrolling="false" align="left">
+  <iframe src="projhistogram.html" width = "800" height ="600" scrolling="false" align="left">
 </body>
 </html>
