Fixed formatting of implementing histogram

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   </head>
 
 <body>
-  <a href="project.html">Project Link</a>
   <iframe src="project.html" width = "400" height ="600" scrolling="false" align="left">
-  <iframe src="projhistogram.html" width = "800" height ="600" scrolling="false" align="left">
+  <iframe src="projhistogram.html" width = "800" height ="600" scrolling="true" align="left">
 </body>
 </html>
