--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
 <body>
-  <iframe src="project.html" width = "400" height ="600" scrolling="false" align="left">
-  <iframe src="projhistogram.html" width = "800" height ="600" scrolling="true" align="left">
+  <iframe src="project.html" width = "400" height ="600" scrolling="false">
+  <iframe src="projhistogram.html" width = "800" height ="600" scrolling="true">
 </body>
 </html>
