--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
 
 <body>
+    <iframe src="project.html" width = "400" height ="600" scrolling="false">
+      <h1></h1>
   <iframe src="projhistogram.html" width = "1000" height ="600" scrolling="true">
 </body>
 </html>
