--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <html>
 
 <head>
-  <script>
+</head>
+<style>
+  #chart{
+    display: block; /* Useless, divs are display:block */
+    width: 100%;    /* Useless, display:block elements are width:100% by default */
+    height: 100%;   /* Fairly useless now, should take children's height */
+    font-size:0;  
+  }
+</style>
 
-</script>
-  </head>
 
 <body>
+  <div class="chart">
     <iframe src="project.html" width = "400" height ="600" scrolling="false">
       <h1></h1>
   <iframe src="projhistogram.html" width = "1000" height ="600" scrolling="true">
+  </div>
 </body>
 </html>
