--- a/index.html
+++ b/index.html
@@ -9,14 +9,25 @@
     height: 100%;   /* Fairly useless now, should take children's height */
     font-size:0;
   }
+  #left_frame {
+  width: 140px;
+}
+#right_frame {
+  width: calc(100% - 140px);
+}
+#left_frame,#right_frame {
+  display: inline-block;
+  box-sizing: border-box;
+  height: calc(100vh - 50px);
+}
 </style>
 
 
 <body>
   <div class="chart">
-    <iframe src="projhistogram.html" width = "400" height ="600" scrolling="false">
+    <iframe id = "left_frame" src="projhistogram.html" width = "400" height ="600" scrolling="false">
       <h1></h1>
-  <iframe src="projhistogram.html" width = "1000" height ="600" scrolling="true">
+  <iframe id="right_frame" src="projhistogram.html" width = "1000" height ="600" scrolling="true">
   </div>
 </body>
 </html>
