--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
 <style>
 html,body        {height:100%;}
-.chart iframe {position:absolute;top:0;left:0;width:100%; height:calc(100% - 120px);}
-.histogram iframe {position:absolute;bottom:0;right:0;width:100%; height:120px;}
+.chart iframe {position:absolute;top:0;left:0;width:120px; height:100%;}
+.histogram iframe {position:absolute;bottom:0;right:0;width:calc(100%-120px); height:100%;}
 
 </style>
 
