changing histo back to project

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ html,body        {height:100%;}
 
 <body>
   <div class="chart">
-    <iframe id = "left_frame" src="projhistogram.html" width = "400" height ="600" scrolling="false"></iframe>
+    <iframe id = "left_frame" src="project.html" width = "400" height ="600" scrolling="false"></iframe>
   </div>
 
   <div class="histogram">
