--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@ html,body        {height:100%;}
 
 <body>
   <div class="chart">
+    <h1>Scatterplot</h1>
     <iframe id = "left_frame" src="project.html" width = "400" height ="600" scrolling="false"></iframe>
   </div>
 
   <div class="histogram">
-  <iframe id="right_frame" src="projhistogram.html" width = "1000" height ="600" scrolling="true">
+    <h1>Histogram</h1>
+    <iframe id="right_frame" src="projhistogram.html" width = "1000" height ="600" scrolling="true">
   </div>
 </body>
 </html>
