--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ html,body        {height:100%;}
     <iframe id = "left_frame" src="project.html" width = "400" height ="600" scrolling="false"></iframe>
   </div>
 
-  <div class="histogram">
-    <h1>Histogram</h1>
-    <iframe id="right_frame" src="projhistogram.html" width = "1000" height ="600" scrolling="true">
+  <div class="Streamgraph">
+    <h1>StreamGraph</h1>
+    <iframe id="right_frame" src="projectstreamgraph.html" width = "1000" height ="600" scrolling="true">
   </div>
 </body>
 </html>
