--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@ html,body        {height:100%;}
 
 
 <body>
-  <div class="chart">
-    <h1>Scatterplot</h1>
-    <iframe id = "left_frame" src="project.html" width = "400" height ="600" scrolling="false"></iframe>
+  <div class="streamgraph">
+    <h1>streamgraph</h1>
+    <iframe id = "left_frame" src="projectstreamgraph.html" width = "400" height ="600" scrolling="false"></iframe>
   </div>
 
-  <div class="Streamgraph">
-    <h1>StreamGraph</h1>
-    <iframe id="right_frame" src="projectstreamgraph.html" width = "1000" height ="600" scrolling="true">
+  <div class="histogram">
+    <h1>Histogram</h1>
+    <iframe id="right_frame" src="projhistogram.html" width = "1000" height ="600" scrolling="true">
   </div>
 </body>
 </html>
