--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <style>
 html,body        {height:100%;}
-.chart iframe {position:absolute;top:0;left:0;width:50%; height:100%;}
+.streamgraph iframe {position:absolute;top:0;left:0;width:50%; height:100%;}
 .histogram iframe {position:absolute;bottom:0;right:0;width:50%; height:100%;}
 
 </style>
